# PlaywrightUtils

./: .gitignore  Dockerfile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
conda_recipe/: meta.yaml
example_site/: index.html
playwright_utils/: __init__.py  playwright_utils.py
test/: test_playwright_utils.py
