[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright_utils"
version = "0.1.0"
description = "Utility functions for Playwright automation"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Oz Levi", email = "ozmaatuk@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "playwright",
    "python-dotenv",
    "configparser",
    "fuzzywuzzy"
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-playwright"
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
homepage = "https://github.com/OzMaatuk/PlaywrightUtils"